Sufficient figures & analysis results for methods and results rough draft.

--- a/enrichment_analysis/combined_ea.ipynb
+++ b/enrichment_analysis/combined_ea.ipynb
@@ -36,25 +36,22 @@
    "outputs": [],
    "source": [
     "dset_idx <- 3\n",
-    "hub_con_thresh <- 0.5"
+    "# hub_con_thresh <- 0.5\n",
+    "# hub_con_thresh <- 0.25\n",
+    "hub_con_thresh <- 0.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -71,7 +68,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  hugo_symbol = \u001b[31mcol_character()\u001b[39m,\n",
       "  entrez_gene_id = \u001b[32mcol_double()\u001b[39m\n",
