--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -2,9 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "\n",
+      "clusterProfiler v3.18.0  For help: https://guangchuangyu.github.io/software/clusterProfiler\n",
+      "\n",
+      "If you use clusterProfiler in published research, please cite:\n",
+      "Guangchuang Yu, Li-Gen Wang, Yanyan Han, Qing-Yu He. clusterProfiler: an R package for comparing biological themes among gene clusters. OMICS: A Journal of Integrative Biology. 2012, 16(5):284-287.\n",
+      "\n",
+      "\n",
+      "Attaching package: 'clusterProfiler'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
+      "\n",
+      "    simplify\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    filter\n",
+      "\n",
+      "\n",
+      "Loading required package: dynamicTreeCut\n",
+      "\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "\n",
+      "Attaching package: 'fastcluster'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'WGCNA'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    cor\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(clusterProfiler)\n",
@@ -17,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3"
+    "dset_idx <- 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -119,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -423,16 +479,16 @@
     {
      "data": {
       "text/html": [
-       "195"
+       "344"
       ],
       "text/latex": [
-       "195"
+       "344"
       ],
       "text/markdown": [
-       "195"
+       "344"
       ],
       "text/plain": [
-       "[1] 195"
+       "[1] 344"
       ]
      },
      "metadata": {},
@@ -446,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -559,16 +615,16 @@
     {
      "data": {
       "text/html": [
-       "20"
+       "99"
       ],
       "text/latex": [
-       "20"
+       "99"
       ],
       "text/markdown": [
-       "20"
+       "99"
       ],
       "text/plain": [
-       "[1] 20"
+       "[1] 99"
       ]
      },
      "metadata": {},
@@ -582,22 +638,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "8229"
+       "7652"
       ],
       "text/latex": [
-       "8229"
+       "7652"
       ],
       "text/markdown": [
-       "8229"
+       "7652"
       ],
       "text/plain": [
-       "[1] 8229"
+       "[1] 7652"
       ]
      },
      "metadata": {},
@@ -606,16 +662,16 @@
     {
      "data": {
       "text/html": [
-       "618"
+       "593"
       ],
       "text/latex": [
-       "618"
+       "593"
       ],
       "text/markdown": [
-       "618"
+       "593"
       ],
       "text/plain": [
-       "[1] 618"
+       "[1] 593"
       ]
      },
      "metadata": {},
@@ -624,16 +680,16 @@
     {
      "data": {
       "text/html": [
-       "20"
+       "99"
       ],
       "text/latex": [
-       "20"
+       "99"
       ],
       "text/markdown": [
-       "20"
+       "99"
       ],
       "text/plain": [
-       "[1] 20"
+       "[1] 99"
       ]
      },
      "metadata": {},
@@ -642,16 +698,16 @@
     {
      "data": {
       "text/html": [
-       "195"
+       "344"
       ],
       "text/latex": [
-       "195"
+       "344"
       ],
       "text/markdown": [
-       "195"
+       "344"
       ],
       "text/plain": [
-       "[1] 195"
+       "[1] 344"
       ]
      },
      "metadata": {},
@@ -674,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
