--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -2,75 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
-      "\n",
-      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "\n",
-      "\n",
-      "clusterProfiler v3.18.0  For help: https://guangchuangyu.github.io/software/clusterProfiler\n",
-      "\n",
-      "If you use clusterProfiler in published research, please cite:\n",
-      "Guangchuang Yu, Li-Gen Wang, Yanyan Han, Qing-Yu He. clusterProfiler: an R package for comparing biological themes among gene clusters. OMICS: A Journal of Integrative Biology. 2012, 16(5):284-287.\n",
-      "\n",
-      "\n",
-      "Attaching package: 'clusterProfiler'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:purrr':\n",
-      "\n",
-      "    simplify\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    filter\n",
-      "\n",
-      "\n",
-      "Loading required package: dynamicTreeCut\n",
-      "\n",
-      "Loading required package: fastcluster\n",
-      "\n",
-      "\n",
-      "Attaching package: 'fastcluster'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    hclust\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'WGCNA'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    cor\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(clusterProfiler)\n",
@@ -83,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -185,13 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -337,13 +261,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1007"
+      ],
+      "text/latex": [
+       "1007"
+      ],
+      "text/markdown": [
+       "1007"
+      ],
+      "text/plain": [
+       "[1] 1007"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "hub_df <- get_most_conn_genes(data_expr, module_colors, soft_power, conn_vs_hub_thresh = hub_con_thresh) %>%\n",
     "    bind_rows(.id = \"module\") %>%\n",
-    "    dplyr::select(geneID, everything())"
+    "    dplyr::select(geneID, everything())\n",
+    "nrow(hub_df)"
    ]
   },
   {
@@ -355,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,12 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dge_geneIDs <- filtered_dge_df$geneID\n",
-    "dge_m_geneIDs <- filtered_dge_m_df$geneID"
+    "deg_list <- filtered_dge_df$geneID\n",
+    "demg_list <- filtered_dge_m_df$geneID"
    ]
   },
   {
@@ -395,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_figo_network_df <- network_mm_gs_df %>%\n",
+    "filtered_network_figo_df <- network_mm_gs_df %>%\n",
     "    dplyr::select(geneID, module, mm_pval, mm_cor) %>%\n",
     "    inner_join(condensed_me_df, by = \"module\") %>%\n",
     "    inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
@@ -453,77 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_entrezIDs <- filtered_lr_df$entrez_gene_id %>% \n",
-    "    union(filtered_anova_df$entrez_gene_id) %>% \n",
-    "    union(filtered_figo_network_df$entrez_gene_id) %>%\n",
-    "    union(filtered_mi_figo_df$entrez_gene_id)\n",
-    "\n",
-    "figo_geneIDs <- filtered_lr_df$geneID %>% \n",
-    "    union(filtered_anova_df$geneID) %>% \n",
-    "    union(filtered_figo_network_df$geneID) %>%\n",
-    "    union(filtered_mi_figo_df$geneID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "344"
-      ],
-      "text/latex": [
-       "344"
-      ],
-      "text/markdown": [
-       "344"
-      ],
-      "text/plain": [
-       "[1] 344"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "length(figo_entrezIDs) == length(figo_geneIDs)\n",
-    "length(figo_geneIDs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "univar_figo_list <- filtered_lr_df$geneID %>% \n",
+    "umsmg_list <- filtered_lr_df$geneID %>%\n",
     "    union(filtered_anova_df$geneID) %>%\n",
-    "    union(filtered_mi_figo_df$geneID)"
+    "    union(filtered_mi_figo_df$geneID)\n",
+    "nsmg_list <- filtered_network_figo_df$geneID"
    ]
   },
   {
@@ -535,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,86 +470,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_entrezIDs <- filtered_coxph_df$entrez_gene_id %>%\n",
-    "    union(filtered_cor_df$entrez_gene_id) %>%\n",
-    "    union(filtered_coxph_network_df$entrez_gene_id) %>%\n",
-    "    union(filtered_mi_survival_df$entrez_gene_id)\n",
-    "\n",
-    "survival_geneIDs <- filtered_coxph_df$geneID %>%\n",
+    "survival_list <- filtered_coxph_df$geneID %>%\n",
     "    union(filtered_cor_df$geneID) %>%\n",
     "    union(filtered_coxph_network_df$geneID) %>%\n",
     "    union(filtered_mi_survival_df$geneID)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "99"
-      ],
-      "text/latex": [
-       "99"
-      ],
-      "text/markdown": [
-       "99"
-      ],
-      "text/plain": [
-       "[1] 99"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "length(survival_geneIDs) == length(survival_geneIDs)\n",
-    "length(survival_geneIDs)"
+    "# Meta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intersect UMSMG & NSMG with DEMG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umsmg_demg_list <- intersect(umsmg_list, demg_list)\n",
+    "nsmg_demg_list <- intersect(nsmg_list, demg_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Full Intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umsmg_nsmg_demg_list <- intersect(umsmg_demg_list, nsmg_demg_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "7652"
+       "8229"
       ],
       "text/latex": [
-       "7652"
+       "8229"
       ],
       "text/markdown": [
-       "7652"
+       "8229"
       ],
       "text/plain": [
-       "[1] 7652"
+       "[1] 8229"
       ]
      },
      "metadata": {},
@@ -677,16 +546,16 @@
     {
      "data": {
       "text/html": [
-       "593"
+       "618"
       ],
       "text/latex": [
-       "593"
+       "618"
       ],
       "text/markdown": [
-       "593"
+       "618"
       ],
       "text/plain": [
-       "[1] 593"
+       "[1] 618"
       ]
      },
      "metadata": {},
@@ -695,16 +564,16 @@
     {
      "data": {
       "text/html": [
-       "99"
+       "135"
       ],
       "text/latex": [
-       "99"
+       "135"
       ],
       "text/markdown": [
-       "99"
+       "135"
       ],
       "text/plain": [
-       "[1] 99"
+       "[1] 135"
       ]
      },
      "metadata": {},
@@ -713,16 +582,88 @@
     {
      "data": {
       "text/html": [
-       "344"
+       "71"
       ],
       "text/latex": [
-       "344"
+       "71"
       ],
       "text/markdown": [
-       "344"
+       "71"
       ],
       "text/plain": [
-       "[1] 344"
+       "[1] 71"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "82"
+      ],
+      "text/latex": [
+       "82"
+      ],
+      "text/markdown": [
+       "82"
+      ],
+      "text/plain": [
+       "[1] 82"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "44"
+      ],
+      "text/latex": [
+       "44"
+      ],
+      "text/markdown": [
+       "44"
+      ],
+      "text/plain": [
+       "[1] 44"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "7"
+      ],
+      "text/latex": [
+       "7"
+      ],
+      "text/markdown": [
+       "7"
+      ],
+      "text/plain": [
+       "[1] 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "20"
+      ],
+      "text/latex": [
+       "20"
+      ],
+      "text/markdown": [
+       "20"
+      ],
+      "text/plain": [
+       "[1] 20"
       ]
      },
      "metadata": {},
@@ -730,10 +671,19 @@
     }
    ],
    "source": [
-    "length(dge_geneIDs)\n",
-    "length(dge_m_geneIDs)\n",
-    "length(survival_geneIDs)\n",
-    "length(figo_geneIDs)"
+    "# length(dge_geneIDs)\n",
+    "# length(dge_m_geneIDs)\n",
+    "# length(survival_geneIDs)\n",
+    "# length(figo_geneIDs)\n",
+    "\n",
+    "length(deg_list)\n",
+    "length(demg_list)\n",
+    "length(umsmg_list)\n",
+    "length(nsmg_list)\n",
+    "length(umsmg_demg_list)\n",
+    "length(nsmg_demg_list)\n",
+    "length(umsmg_nsmg_demg_list)\n",
+    "length(survival_list)"
    ]
   },
   {
@@ -745,24 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_lines(dge_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_gene_list.txt\"))\n",
-    "write_lines(dge_m_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_m_gene_list.txt\"))\n",
-    "write_lines(figo_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
-    "write_lines(survival_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_lines(filtered_figo_network_df$geneID, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_network_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
-    "write_lines(univar_figo_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_univar_gene_list.txt\"))"
+    "write_lines(deg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_deg_list.txt\"))\n",
+    "write_lines(demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
+    "write_lines(umsmg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_list.txt\"))\n",
+    "write_lines(nsmg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_list.txt\"))\n",
+    "write_lines(umsmg_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))\n",
+    "write_lines(nsmg_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_demg_list.txt\"))\n",
+    "write_lines(umsmg_nsmg_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_nsmg_demg_list.txt\"))\n",
+    "write_lines(survival_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_list.txt\"))"
    ]
   },
   {
