--- a/figures/ea_results_vis.ipynb
+++ b/figures/ea_results_vis.ipynb
@@ -58,7 +58,12 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
